# tgm_acc_2019_expert_level3_rs

./: Cargo.toml  LICENSE  README.md  strategy.txt
.github/workflows/: rust.yml
benches/: cycle.rs  hardcoded.rs  initial.rs  linear.rs  parallel.rs  rayon.rs
src/: cycle.rs  generator.rs  hardcoded.rs  initial.rs  lib.rs  linear.rs  main.rs  parallel.rs  rayon.rs
