[package]
name = "tgm_acc_2019_expert_level3"
version = "1.0.0"
description = "A collection of solutions for the TGM Advent Coding Contest 2019 expert level 3"
authors = ["'pdamianik' <'39028343+pdamianik@users.noreply.github.com'>"]
edition = "2018"

[lib]
name = "tgm_acc_2019_expert_level3"
path = "src/lib.rs"

[[bin]]
name = "level3"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
clap = { version = "4.3.2", features = ["derive", "cargo"] }
num = "0.4.0"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "initial"
harness = false

[[bench]]
name = "rayon"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "cycle"
harness = false

[[bench]]
name = "hardcoded"
harness = false
